fixed all error. and complete the user ( without update )
