# frontend-ui/src/app/services/models.ts
@@ -3,6 +3,7 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export type { Agent } from './models/agent';
+export type { DeletedUser } from './models/deleted-user';
 export type { Installment } from './models/installment';
 export type { Member } from './models/member';
 export type { Product } from './models/product';
