# frontend-ui/src/app/services/models/deleted-user.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface DeletedUser {
+  deletedAt?: string;
+  id?: number;
+  originalUserId?: number;
+  password?: string;
+  referenceId?: number;
+  role?: string;
+  status?: string;
+  username?: string;
+}
